[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/T_machine_leg_foot.png" type="Texture" id=1]
[ext_resource path="res://assets/T_machine_leg_short_section.png" type="Texture" id=2]
[ext_resource path="res://assets/T_machine_leg_long_section.png" type="Texture" id=3]
[ext_resource path="res://assets/Machine_leg_joint_1.png" type="Texture" id=4]
[ext_resource path="res://player/IK_leg.gd" type="Script" id=6]
[ext_resource path="res://player/Leg_ik_solver.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "walk_1"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("target:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8, 2.4, 4, 4.3, 4.7 ),
"transitions": PoolRealArray( 1, 0.297302, 3.13834, 0.329877, 5.65685, 1 ),
"update": 0,
"values": [ Vector2( 224.2, 409.2 ), Vector2( -205.2, 409.2 ), Vector2( -228.633, 352.2 ), Vector2( 228, 333.2 ), Vector2( 233.586, 301.077 ), Vector2( 224.2, 409.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("target:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.8, 2.6, 4.3, 4.7 ),
"transitions": PoolRealArray( 0.554784, 29.857, 0.15932, 1 ),
"update": 0,
"values": [ 0.0, 34.7, -8.7, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "screenshake"
} ]
}

[node name="IK_leg" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 236.142, 224.969 ]
}

[node name="target" type="Sprite" parent="."]
position = Vector2( 224.2, 409.2 )
z_index = 1
texture = ExtResource( 1 )

[node name="Leg_base" type="Position2D" parent="."]
script = ExtResource( 7 )

[node name="segment" type="Sprite" parent="Leg_base"]
position = Vector2( 63.5984, 0.447647 )
rotation = 1.5708
texture = ExtResource( 2 )
region_rect = Rect2( 0, 130, 190, 31 )

[node name="Joint1" type="Position2D" parent="Leg_base"]
position = Vector2( 143.703, -0.7547 )

[node name="joint" type="Sprite" parent="Leg_base/Joint1"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 4 )

[node name="segment" type="Sprite" parent="Leg_base/Joint1"]
position = Vector2( 77.9617, -1.91833 )
rotation = 1.5708
texture = ExtResource( 2 )
region_rect = Rect2( 0, 130, 190, 31 )

[node name="Joint2" type="Position2D" parent="Leg_base/Joint1"]
position = Vector2( 176.443, 0 )

[node name="joint" type="Sprite" parent="Leg_base/Joint1/Joint2"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 4 )

[node name="segment" type="Sprite" parent="Leg_base/Joint1/Joint2"]
position = Vector2( 131.646, 1.97707 )
rotation = 1.5708
texture = ExtResource( 3 )
region_rect = Rect2( 0, 130, 190, 31 )

[node name="Hand" type="Position2D" parent="Leg_base/Joint1/Joint2"]
position = Vector2( 243.625, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk_1 = SubResource( 1 )
